--- a/src/index.css
+++ b/src/index.css
@@ -323,3 +323,15 @@ Variables
     color: var(--clr-red-dark);
   }
   
+
+/*our styles*/
+.root {
+    flex-grow: 1,
+}
+
+.paper {
+    margin: 5rem;
+    padding: 2rem;
+    text-align: center;
+    color: grey;
+  }
